# bookwiki

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  design.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: design-md-asbuilt-rewrite.md
bookwiki/: __init__.py  chunking.py  concepts.py
docs/: mineru-setup.md  tutorial.md
scripts/: _common.py  caption.py  check.py  convert.py  generate.py  index.py  init_book.py  repair.py  run.py  site.py  split.py  structure.py
site-template/: README.md  next-env.d.ts  next.config.mjs  package.json  pnpm-lock.yaml  source.config.ts  vitest.config.ts
tests/: conftest.py  fakes.py  test_agents.py  test_agents_llm_runtime.py  test_application_quiz_agent.py  test_apply_repair.py  test_cache.py  test_card_agent.py  test_chunking.py  test_cli_e2e.py  test_concept_pages_inline.py  test_config_language.py  test_convert_m2.py  test_document_runtime.py  test_dry_run.py  test_dry_run_orchestrator.py  test_e2e_smoke.py  test_exam_agent.py  test_exam_checker.py  test_exam_explain_agent.py  test_exam_indexer.py  test_exam_integration.py  test_exam_pool.py  test_exam_renderer.py  test_exam_schema.py  test_figure_resolution.py  test_generate_fault_tolerance.py  test_generate_parallel.py  test_generate_sections.py  test_graph_logging.py  test_inline_quiz.py  test_integrate_generated_figures.py  test_integrator.py  test_knowledge_quiz_agent.py  test_lg_runner.py  test_llm_runtime.py  test_m3_structure_split.py  test_m4_generate_node.py  test_m5_pipeline.py  test_m6_indexer.py  (+27 more)
(+250 files in other folders)
