[project]
name = "book-wiki"
version = "0.1.0"
description = "BookWiki generator: source material to vault, SQLite index, and learning site."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8",
  "pypdf>=6.12.0",
  "pyyaml>=6.0",
  "scipy>=1.17.1",
]

[project.optional-dependencies]
runtime = [
  "langgraph>=0.2",
  "langgraph-checkpoint-sqlite>=2.0",
  "litellm>=1.50",
  "instructor>=1.6",
  "diskcache>=5.6",
  "tiktoken>=0.8",
  "matplotlib>=3.9",
  "numpy>=2.0",
  "pillow>=10.0",
]
mineru = [
  "mineru[pipeline,core]",
]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
]

[tool.setuptools.packages.find]
include = ["bookwiki*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "smoke: fast end-to-end checks required by CI",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
